# self-atlas

./: .gitignore  .privacy-patterns.example  CONTRIBUTING.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
assets/obsidian/snippets/: self-atlas.css
assets/templates/: anti-taste.md  career-thread.md  collaborator.md  concept.md  creative-reference.md  credential-reference.md  desire.md  domain-map.md  employer.md  event.md  family-member.md  fear.md  friend.md  health-metric.md  health-observation.md  identity.md  logistics-thread.md  love-relationship.md  milestone.md  money-context.md  music-identity.md  open-thread.md  pattern.md  person.md  product-principle.md  project.md  question.md  role.md  skill.md  source-capture.md  taste-preference.md  tension.md  thing.md  timeline-period.md  value.md
docs/: 10-minute-first-vault.md
examples/demo-vault/: README.md
examples/demo-vault/00 System/: Graph Rules.md  Home.md  Open Threads.md  Question Queue.md  Source Log.md
examples/demo-vault/10 Self/: Identity.md
examples/demo-vault/25 Love/: River.md
examples/demo-vault/50 Taste/: Taste Profile.md
examples/demo-vault/60 Interests/: Music Identity.md
scripts/: install_local_plugin.py  public_release_check.py  self_atlas.py
scripts/self_atlas_lib/: __init__.py  capture.py  cli.py  constants.py  experience.py  export.py  extraction.py  init.py  insight.py  migrations.py  models.py  questions.py  reports.py  templates.py  timeline.py  vault.py
scripts/self_atlas_lib/insights/: beliefs.py  (+14 more)
skills/self-atlas/: SKILL.md
tests/: test_self_atlas.py
(+23 files in other folders)
