[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "self-atlas"
version = "0.1.2"
description = "Local-first Markdown life graph helpers for Codex-assisted personal memory."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Self Atlas contributors" }]
keywords = ["codex", "markdown", "memory", "obsidian", "personal-knowledge-management"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]

[project.scripts]
self-atlas = "self_atlas_lib.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
